Fixed minor layout issue with nav

--- a/sass/layout/grid/_grid.scss
+++ b/sass/layout/grid/_grid.scss
@@ -3,23 +3,23 @@
   display: flex;
   height: 100vh;
   flex-direction: column;
+}
 
-  .layout-main--nav {
-    min-height: 100px;
-    flex: none;
-  }
+.layout-main--nav {
+  min-height: 100px;
+  flex: none;
+}
 
-  .layout-main--search {
-    flex: none;
-  }
+.layout-main--search {
+  flex: none;
+}
 
-  .layout-main--content {
-    flex: 1 auto;
-  }
+.layout-main--content {
+  flex: 1 auto;
+}
 
-  .layout-main--footer {
-    flex: none;
-  }
+.layout-main--footer {
+  flex: none;
 }
 
 @supports (display: grid) {
@@ -52,6 +52,7 @@
 
   .layout-main--nav {
     grid-area: nav;
+    min-height: auto;
   }
 
   .layout-main--search {
